--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-container
+{
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-item{
+  flex: 1 1 25%;
 }
+
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+
